<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">WearAuthenticator</string>
    <string name="hello_round">Hello Round World!</string>
    <string name="hello_square">Hello Square World!</string>
    <string name="add">Add</string>
    <string name="invalid_token">The token specified was invalid!</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="restore_defaults">Restore Defaults</string>
    <string name="no_keys">No OTP keys installed.</string>
    <string name="add_token">Add Token</string>
    <string name="scan_qr_code">Scan QR Code</string>
    <string name="interval">Interval</string>
    <string name="counter">Counter</string>
    <string name="issuer">Issuer</string>
    <string name="id">ID</string>
    <string name="secret">Secret</string>
    <string name="type">Type</string>
    <string name="algorithm">Algorithm</string>
    <string name="digits">Digits</string>
    <string name="save">Save</string>
    <string name="code_copied">Code copied to clipboard.</string>
    <string name="about_freeotp">About FreeOTP</string>
    <string name="about_version">FreeOTP Version %1$s (%2$d)</string>
    <string name="about_copyright">© 2013 - Red Hat, Inc., et al.</string>
    <string name="about_license">FreeOTP is licensed under %1$s.</string>
    <string name="about_website">For more information, see our %s.</string>
    <string name="about_feedback">We welcome your feedback:&lt;br/>• %1$s&lt;br/>• %2$s</string>
    <string name="about_icons">Some icons used by this application are reproduced from work created and shared by the Android Open Source Project and used according to terms described in the Creative Commons 2.5 Attribution License.</string>
    <string name="link_website">&lt;a href="http://freeotp.fedorahosted.org">website&lt;/a></string>
    <string name="link_report_a_problem">&lt;a href="https://fedorahosted.org/freeotp/wiki/ProblemReport">Report a Problem&lt;/a></string>
    <string name="link_ask_for_help">&lt;a href="http://lists.fedorahosted.org/mailman/listinfo/freeotp-devel">Ask for Help&lt;/a></string>
    <string name="link_apache2">&lt;a href="http://www.apache.org/licenses/LICENSE-2.0.html">Apache 2.0&lt;/a></string>
    <string name="error_camera_open">Error while opening camera!</string>
    <string name="delete_summary">This is your last chance: if you delete this token, it will be gone forever. It will not be disabled on the server.</string>
    <string name="delete_question">Delete this token?</string>
    <string name="send_to_wear">Send to Wear</string>

    <string-array name="algorithms">
        <item>MD5</item>
        <item>SHA1</item>
        <item>SHA256</item>
        <item>SHA512</item>
    </string-array>

    <string name="title_activity_manage_tokens">ManageTokens</string>
    <string name="edit_on_phone">Edit On Phone</string>

</resources>
