...
    android:layout_width="0dp"
    android:layout_height="72dp"
    android:layout_weight="1"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="26dp"
        android:gravity="center_vertical|left"
        android:paddingTop="4dp"
        android:paddingLeft="8dp"
        android:text="Example: example@example.com"
...
            android:layout_marginLeft="8dp"
            android:src="@drawable/delete"
            style="?android:attr/borderlessButtonStyle"
            android:layout_gravity="center" />
	    
	    <TextView
	        android:id="@+id/code"
	        android:layout_width="match_parent"
	        android:layout_height="46dp"
	        android:gravity="center_vertical|left"
	        android:padding="0dp"
	        android:text="00000000"
	        android:textSize="34sp"
...
