<?xml version="1.0" encoding="utf-8"?>
<!--
   - FreeOTP
   -
   - Authors: Nathaniel McCallum <npmccallum@redhat.com>
   -
   - Copyright (C) 2013  Nathaniel McCallum, Red Hat
   -
   - Licensed under the Apache License, Version 2.0 (the "License");
   - you may not use this file except in compliance with the License.
   - You may obtain a copy of the License at
   -
   -     http://www.apache.org/licenses/LICENSE-2.0
   -
   - Unless required by applicable law or agreed to in writing, software
   - distributed under the License is distributed on an "AS IS" BASIS,
   - WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
   - See the License for the specific language governing permissions and
   - limitations under the License.
   -->

<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    <item
        android:id="@+id/action_add"
        android:showAsAction="always"
        android:icon="@drawable/ic_action_new_account"
        android:title="@string/add" />

    <item
        android:id="@+id/action_about"
        android:showAsAction="never"
        android:icon="@android:drawable/ic_menu_info_details"
        android:title="@string/about" />
</menu>
